<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp">

        <TextView
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_all_sides_green"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/start_werd"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/editBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/border_all_sides_green"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/edit_werd"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/border_all_sides_green"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/delete_werd"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>
</layout>