<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".counter.presentation.ui.CounterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_20sdp">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_250sdp"
                app:cpb_background_progressbar_color="@color/light_gray"
                app:cpb_background_progressbar_width="@dimen/_5sdp"
                app:cpb_progress_direction="to_right"
                app:cpb_progressbar_color="@color/green_color"
                app:cpb_progressbar_width="@dimen/_12sdp"
                app:cpb_round_border="false"
                app:layout_constraintBottom_toTopOf="@+id/linearBtns"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxCountTV"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/countNumTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/grey_i"
                android:textSize="@dimen/_55sdp"
                app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
                app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

            <TextView
                android:id="@+id/segaTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:textColor="@color/grey_i"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/astgfr_allah" />

            <TextView
                android:id="@+id/maxCountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/border_all_sides_white"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:textColor="@color/grey_i"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/segaTV"
                tools:text="1000" />

            <LinearLayout
                android:id="@+id/linearBtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/changeMaxCountBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_all_sides_green"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/edit_werd_count"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/resetCountBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_all_sides_green"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/reset_count"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>